<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amir_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo Classic bringup for AMIR 740 arm on Mecanum3 rover</description>
  <maintainer email="infodesk@vstone.co.jp">Vstone</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>robot_state_publisher</depend>
  <depend>amir_description</depend>
  <depend>mecanumrover_description</depend>
  <depend>mecanumrover3_bringup</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
