<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mecanumrover3_navigation</name>
  <version>1.1.0</version>
  <description>slam_tools and nav2 samples for Mecanumrover Ver.3.0</description>
  <maintainer email="infodesk@vstone.co.jp">Vstone</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nav2_common</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_smoother</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_velocity_smoother</depend>
  
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>rviz2</depend>
  <depend>slam_toolbox</depend>
  <depend>mecanumrover_description</depend>
  <depend>mecanumrover3_bringup</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
